# ml_pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  notebook.ipynb  package-lock.json  pyproject.toml  requirements.txt
aws_fs/localstack/: docker-compose.yml
lambdas/s3-copy-lambda/: Dockerfile
lambdas/s3-copy-lambda/src/: s3_copy.py
localstack/: docker-compose.yml
scripts/: create_and_fill_db.sh  create_sqs_with_lambda.sh  load_metadata.py  table-definition.json
scripts/data/: create_and_fill_db.sh  load_metadata.py  table-definition.json
src/: api.py  db.py  pytorch_model.py  s3.py  utils.py
src/annotations_for_deep_fashion/: list_attr_cloth.txt
